--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
-    <title>Pawsitively Insured - Home</title>
+    <title>Pawsitively Insured Completely - Home</title>
     <style>
         body {
             font-family: Arial, sans-serif;
