--- a/website/not_booked.html
+++ b/website/not_booked.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<!-- Start Google Tag Manager -->
-<script>
-(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P6WZFPLT');
-</script>
-<!-- End Google Tag Manager -->
 <html>
 
 <head>
@@ -29,6 +19,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         fbq('track', 'PageView');
     </script>
     <!-- End Facebook Pixel Code -->
+
+    <!-- Start Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+            var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-P6WZFPLT');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <title>Not Booked</title>
     <style>
         body {
@@ -57,7 +59,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         }
     </style>
 </head>
-
 <body>
     <div class="container">
         <h1>Thank You for Your Interest</h1>
